# slack-cli

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  LICENSE  Makefile  PROJECT_PROMPT.md  README.md  go.mod  go.sum  pyproject.toml  slack-sharable.sh  slack-tokens.md
.github/workflows/: ci.yml  create-release.yml  e2e.yml  release.yml
cmd/slack-cli/: main.go
internal/api/: client.go  client_test.go  errors.go  options.go
internal/auth/: auth.go  auth_test.go  keychain.go  keychain_test.go  sanitize.go  sanitize_test.go
internal/cache/: cache.go  cache_test.go  frontmatter.go
internal/channels/: resolve.go  resolve_test.go
internal/commands/: auth.go  channel.go  channels.go  channels_list.go  channels_list_test.go  channels_search.go  channels_search_test.go  derived_test.go  helpers.go  helpers_test.go  message.go  output_dir_test.go  root.go  saved.go  saved_e2e_test.go  saved_http_test.go  saved_test.go  search.go  search_test.go  users.go  users_test.go  version.go
internal/config/: config.go  config_test.go
internal/formatting/: emoji.go  emoji_test.go  message.go  message_test.go  mrkdwn.go  mrkdwn_test.go  time.go  time_test.go  url.go  url_test.go
internal/output/: output.go  output_test.go
internal/table/: table.go
internal/users/: resolve.go  resolve_test.go
src/slack_cli/: __main__.py  api.py  auth.py  channels.py  cli.py  config.py  formatting.py  users.py
tasks/backlog/: 02-core-types-and-config.md  06-bordered-tables.md  (+6 more)
tests/: e2e_test.go  test_api.py  test_auth.py  test_check.py  test_formatting.py
(+40 files in other folders)
